Ingress-Resources/Ingress-Templete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kubernetes-example
spec:
#for customize error Pages for not found routing 
  defaultBackend:
    service:
      name: kubernetes-example
      port:
        number: 80
  tls:
  - hosts: 
    - exapmle.com
    secretName: example-secret-tls
  rules:
  - host: exapmle.com
    http:
      paths:
      - backend: 
          service:
            name: expamle-service
            port:
              number: 80
